--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/techjobs4
 spring.datasource.username=techjobs4
-spring.datasource.password=techjobs44
+spring.datasource.password=techjobs123
 
 # Specify the DBMS
 spring.jpa.database = MYSQL
 
 # Show or not log for each sql query
-spring.jpa.show-sql = false
+spring.jpa.show-sql = true
 
 # Hibernate ddl auto (create, create-drop, update)
 spring.jpa.hibernate.ddl-auto = update
